<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#bbbbbb" android:scrollbars="vertical" android:minHeight="200dip">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:paddingBottom="10dip" android:layout_gravity="center_vertical" android:gravity="center_vertical" android:layout_marginTop="10dip">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:id="@+id/draft_prompt"
			android:text="@string/draft_title" android:textColor="#000000" android:paddingLeft="10dip" android:paddingRight="10dip" android:gravity="center_vertical"/>
		<CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/draft_tweet_cb" android:textColor="#000000" android:id="@+id/draft_tweet"></CheckBox>
		
	<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="right|center_vertical" android:layout_gravity="right|center_vertical">
    
    <TextView android:id="@+id/draft_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_limit" android:layout_marginRight="10dip" android:textColor="#000000" android:layout_marginLeft="10dip"></TextView>
</LinearLayout>

</LinearLayout>
	<EditText android:id="@+id/body" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" android:gravity="top" android:paddingLeft="5dip" android:paddingRight="5dip" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:minHeight="50dip"/>
	



<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal">
	
	<Button android:id="@+id/draft_send" 
	  android:text="@string/send"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:minWidth="80dip"/>
	<Button android:text="@string/cancel"
	android:id="@+id/draft_cancel"
android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:minWidth="80dip"></Button>




</LinearLayout>
</LinearLayout>